k8s/client_node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployement
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client  # => SERVICE spec: selector:
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: react-client
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort # cluster IP
  selector:
    app: client  # <== POD spec: selector: matchLabels: app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: client-srv
