k8s/event_bus_node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployement
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: react-event-bus
        imagePullPolicy: Never
        ports:
        - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
      name: event-bus-srv
