k8s/moderation_node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployement
  labels:
    app: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: react-moderation
        imagePullPolicy: Never
        ports:
        - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: NodePort
  selector:
    app: moderation
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
      name: moderation-srv
