k8s/posts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployement
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: react-posts
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: posts-clusterip-srv
