k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
# CLIENT-SRV
  - host: localhost
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
# POST-CLUSTERIP-SRV
  - host: localhost
    http:
      paths:
      - path: /posts/create
        pathType: Prefix
        backend:
          service:
            name: posts-clusterip-srv
            port:
              number: 4000
# QUERY-SRV
  - host: localhost
    http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 4002
# COMMENT-SRV
  - host: localhost
    http:
      paths:
      - path: /posts/?(.*)/comments
        pathType: Prefix
        backend:
          service:
            name: comments-srv
            port:
              number: 4001
